v2025.01.21.0.2
===============
Fixes
* Fix aspect_template reference in java_classpath aspect #7265

v2025.01.21
===========
Fixes:
* Fix qsync NPE #7222
* Fix red code in MODULE.bazel #7217
* Copy aspect files to workspace #7202
* Fix mac agent native errors #7216

v2025.01.07
===========
* Allow to boost .ijwb over BSP and .idea folder. #7201

v2024.12.17
===========
Fixes:
* Keep bazel from automatically enabling curses with the old sync view #7143
* Do not use curses with the old sync view #7139
* Do not append \n for PROCESS since that output has all of the delim… #7146
* clion: fix non-passed env vars for gdbserverless debugging #7167
* handle non-valid project view file on reload #7159
Features:
* Adds support for the google test run button in nova #7062
* Add catch2 test support in CLion #7141
* Adds support for the run button on main functions in nova  #7100
* Experimental: Basic qsync support in CLion for linux #7094

v2024.12.03
===========
Fixes:
* fix: NPE in WorkspaceHelper when project is not loaded yet #7036
* fix issues with aspect templates not available in query sync mode #7048
* fix: Don't require rules_java and rules_python for bazel 7 and older #7052
* Reapply "fix: Support bazel 8 and --noenable_workspace mode (#6990)… #7045
* Handle included MODULE.bazel files as well #7057
* Fix indexing problem with Fix getPackageName which didn't respect "build ignore" #7034
* Stop adding a trailing # when filtering tests for JUnit 5 #7060
* fix(qsync): Include runtime_deps in the target graph #7081
* Fix over-including when view_project_root is set. #7002
* fix: remove strongInfoHolder flag, so users can choose which plugin t… #7092
* Reload project view, and make sure that BazelImportSettings respect p… #7088
* fix(qsync): Hightlighting level is always updated after 'enable analy… #7101
Features:
* PTY enabled terminal for the new sync view #7001
* Enable the new sync view for query sync #7037

v2024.11.19
===========
Features: