@@ -5,44 +5,12 @@
 
 licenses(["notice"])  # Apache 2.0
 
-load(":flag_hack.bzl",
-     "define_flag_hack")
+load(":flag_hack.bzl", "define_flag_hack")
 
-java_binary(
-    name = "JarFilter_bin",
-    main_class = "com.google.idea.blaze.aspect.JarFilter",
-    runtime_deps = [":jar_filter_lib"],
-    visibility = ["//visibility:public"],
-)
-
-java_import(
-    name = "jar_filter_lib",
-    jars = ["tools/JarFilter_deploy.jar"],
-)
-
-java_binary(
-    name = "PackageParser_bin",
-    main_class = "com.google.idea.blaze.aspect.PackageParser",
-    runtime_deps = [":package_parser_lib"],
-    visibility = ["//visibility:public"],
-)
-
-java_import(
-    name = "package_parser_lib",
-    jars = ["tools/PackageParser_deploy.jar"],
-)
-
-java_binary(
-    name = "CreateAar_bin",
-    main_class = "com.google.idea.blaze.aspect.CreateAar",
-    runtime_deps = [":jar_filter_lib"],
-    visibility = ["//visibility:public"],
-)
-
-
-java_import(
-    name = "create_aar_lib",
-    jars = ["tools/CreateAar_deploy.jar"],
-)
+exports_files([
+    "tools/PackageParser_deploy.jar",
+    "tools/CreateAar_deploy.jar",
+    "tools/JarFilter_deploy.jar",
+])
 
 define_flag_hack()
