@@ -2,12 +2,15 @@ package com.google.idea.blaze.clwb;
 
 import static com.google.common.truth.Truth.assertThat;
 import static com.google.idea.blaze.clwb.base.Assertions.assertContainsHeader;
+import static com.google.idea.blaze.clwb.base.Assertions.assertContainsPattern;
 
 import com.intellij.openapi.util.SystemInfo;
 import com.jetbrains.cidr.lang.workspace.compiler.ClangCompilerKind;
 import com.jetbrains.cidr.lang.workspace.compiler.GCCCompilerKind;
 import com.jetbrains.cidr.lang.workspace.compiler.MSVCCompilerKind;
 import com.google.idea.blaze.clwb.base.ClwbIntegrationTestCase;
+import java.io.IOException;
+import java.nio.file.Files;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -16,12 +19,13 @@ import org.junit.runners.JUnit4;
 public class SimpleTest extends ClwbIntegrationTestCase {
 
   @Test
-  public void testClwb() {
+  public void testClwb() throws IOException {
     final var errors = runSync(defaultSyncParams().build());
     errors.assertNoErrors();
 
     checkCompiler();
     checkTest();
+    checkXcode();
   }
 
   private void checkCompiler() {
@@ -43,5 +47,21 @@ public class SimpleTest extends ClwbIntegrationTestCase {
 
     assertContainsHeader("iostream", compilerSettings);
     assertContainsHeader("catch2/catch_test_macros.hpp", compilerSettings);
+  }
+
+  private void checkXcode() throws IOException {
+    if (!SystemInfo.isMac) {
+      return;
+    }
+
+    final var compilerSettings = findFileCompilerSettings("main/test.cc");
+
+    final var compilerExecutable = compilerSettings.getCompilerExecutable();
+    assertThat(compilerExecutable).isNotNull();
+
+    final var scriptLines = Files.readAllLines(compilerSettings.getCompilerExecutable().toPath());
+
+    assertContainsPattern("export DEVELOPER_DIR=/.*/Xcode.*.app/Contents/Developer", scriptLines);
+    assertContainsPattern("export SDKROOT=/.*/Xcode.*.app/Contents/Developer/.*", scriptLines);
   }
 }
