@@ -1,10 +1,11 @@
+bazel_dep(name = "rules_cc", version = "0.1.0")
 bazel_dep(name = "toolchains_llvm", version = "1.2.0")
 
 # Configure and register the toolchain.
 llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
 llvm.toolchain(
-   llvm_version = "19.1.0",
+    llvm_version = "19.1.0",
 )
-
 use_repo(llvm, "llvm_toolchain")
+
 register_toolchains("@llvm_toolchain//:all")
