@@ -1,2 +1,1 @@
 bazel_dep(name = "rules_cc", version = "0.1.0")
-bazel_dep(name = "catch2", version = "3.7.1")
